Fix: contrast ratio and color variables format

--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -4,9 +4,9 @@
 $font-family-sans-serif: "Arimo", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $headings-font-family: "Oswald", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
-$min-contrast-ratio: 3.5;
-$primary: rgb(66, 144, 181);
-$dark: rgb(15, 32, 40);
+$min-contrast-ratio: 3;
+$primary: #4290b5;
+$dark: #0f2028;
 
 $nav-link-font-size: 14px;
 
